@@ -1,1 +1,19 @@
 # JavaFX XML Store
+Application enables editing XML store file in defined format(store owner, 
+store employees, store items) using graphical user interface.
+Application functions:
+- view list of elements from XML file
+- editing list of employes
+- editing list of items in store
+- adding users by registration and login
+##  Technologies : 
+- JavaFX, XML, Java DOM Parser
+### Project details:
+- openjfx-11.0.2_windows-x64_bin-sdk
+- Java version: 12
+- JVM options:
+--module-path openjfx-11.0.2_windows-x64_bin-sdk\javafx-sdk-11.0.2\lib
+--add-modules=javafx.controls,javafx.fxml
+--add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+--add-exports javafx.graphics/com.sun.prism=ALL-UNNAMED
+--add-exports javafx.graphics/com.sun.prism.paint=ALL-UNNAMED
